Add /samples/incremental-reindex endpoint, add sample.sample_last_modified_timestamp, and some refactoring
