# server/spatialapi/routes/samples_reindex/__init__.py
@@ -10,6 +10,7 @@ from hubmap_commons.hm_auth import AuthHelper
 from spatialapi.manager.cell_type_count_manager import CellTypeCountManager
 from spatialapi.manager.sample_load_manager import SampleLoadManager
 from spatialapi.manager.neo4j_manager import Neo4jManager
+from spatiemapi.manager.postgresql_manager import PostgresqlManager
 from spatialapi.utils import json_error, sample_uuid_validation
 
 logger = logging.getLogger(__name__)
@@ -66,8 +67,7 @@ def start_process_recs_thread(recs, config) -> None:
 
 @samples_reindex_blueprint.route('/samples/<sample_uuid>/reindex', methods=['PUT'])
 def samples_reindex(sample_uuid):
-    """ This doesn't need to be threaded because it is just doing one sample.
-    """
+    """ This doesn't need to be threaded because it is just reindexing one sample."""
     logger.info(f'samples_reindex: PUT /samples/{sample_uuid}/reindex')
     sample_uuid_validation(sample_uuid)
 
@@ -98,25 +98,35 @@ def samples_reindex(sample_uuid):
     return make_response('Processing begun', HTTPStatus.ACCEPTED)
 
 
-@samples_reindex_blueprint.route('/samples/organs/<organ_code>/reindex', methods=['PUT'])
-def samples_organs_reindex(organ_code):
-    logger.info(f'samples_organs_reindex: PUT /samples/organs/{organ_code}/reindex')
+@samples_reindex_blueprint.route('/samples/incremental-reindex', methods=['PUT'])
+def samples_incremental_reindex():
+    """Reindex only those recs which are newer in Neo4J"""
+    logger.info(f'samples_incremental_reindex: PUT /samples/incremental-reindex')
 
     config = configparser.ConfigParser()
     app_properties: str = 'resources/app.properties'
     logger.info(f'Reading properties file: {app_properties}')
     config.read(app_properties)
 
-    # bearer: str = request.headers.get('Authorization', None)
-    # if bearer is None or len(bearer.split()) != 2:
-    #     return make_response("Authorization Bearer token not presented", HTTPStatus.UNAUTHORIZED)
-    # bearer_token = bearer.split()[1]
-    # logger.info(f"Bearer Token: {bearer_token}")
-
     try:
         neo4j_manager = Neo4jManager(config)
-        recs: List[dict] = neo4j_manager.query_organ(organ_code)
-        logger.debug(f"Records found: {len(recs)}")
+        postgresql_manager = PostgresqlManager(config)
+
+        sample_timestamp_list: list =\
+            postgresql_manager.select_all("SELECT sample_uuid, sample_last_modified_timestamp from sample")
+        # Create a dict where the sample_uuid is the key to the sample_last_modified_timestamp value...
+        sample_timestamp: dict = {row[0]: row[1] for row in sample_timestamp_list}
+
+        all_recs: List[dict] = neo4j_manager.query_all()
+
+        recs: list = []
+        for rec in all_recs:
+            lmt_from_db: int = sample_timestamp.get(rec['sample']['uuid'])
+            # Reprocess the recs whose sample.last_modified_timestamp in Neo4J is greater than that in the database,
+            # or those that don't yet exist in the database...
+            if lmt_from_db is None or rec['sample']['last_modified_timestamp'] > lmt_from_db:
+                recs.append(rec)
+        logger.debug(f"Records to be reindexed: {len(recs)}")
 
         start_process_recs_thread(recs, config)
     finally:
@@ -128,18 +138,13 @@ def samples_organs_reindex(organ_code):
 
 @samples_reindex_blueprint.route('/samples/reindex-all', methods=['PUT'])
 def samples_reindex_all():
+    """Reindex all recs found in Neo4J"""
     logger.info(f'samples_reindex_all: PUT /samples/reindex-all')
 
     config = configparser.ConfigParser()
     app_properties: str = 'resources/app.properties'
     logger.info(f'Reading properties file: {app_properties}')
     config.read(app_properties)
-
-    # bearer: str = request.headers.get('Authorization', None)
-    # if bearer is None or len(bearer.split()) != 2:
-    #     return make_response("Authorization Bearer token not presented", HTTPStatus.UNAUTHORIZED)
-    # bearer_token = bearer.split()[1]
-    # logger.info(f"Bearer Token: {bearer_token}")
 
     try:
         neo4j_manager = Neo4jManager(config)
