# spatial-api-spec.yaml
@@ -39,6 +39,13 @@ paths:
       responses:
         '202':
           description: Accepted for Processing
+  '/samples/incremental-reindex':
+    put:
+      summary: For those samples that are newer in Neo4J, delete the old sample information and replace it by processing the current data
+      operationId: samples_incremental_reindex
+      responses:
+        '202':
+          description: Accepted for Processing
   '/samples/{sample_uuid}/reindex':
     put:
       summary: For the sample_uuid given, delete the old sample information and replace it by processing the current data
